@@ -1,3 +1,9 @@
+2004-05-18 [christoph]
+
+	* src/maildir.c
+	* src/maildir_gtk.c
+		implement new folder creation
+
 2004-05-07 [christoph]
 
 	* src/maildir.c
